[package]
name = "persistent-bloom"
version = "0.1.0"
authors = ["Alex Gajewski <agajews@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bloomfilter = "1.0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
log = "0.4.14"
